# cpp-engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  make_debug.bat  make_release.bat  makefile  shader.fsh  shader.vsh
core/: CMakeLists.txt  assert.cpp  assert.h  assert.hpp  common.h  common.hpp  config.hpp  file_system.cpp  file_system.h  filesystem.cpp  filesystem.h  filesystem.hpp  input.hpp  math.h  math.hpp  raw_input.cpp  raw_input.h  shared_ptr.hpp  string.hpp  timer.cpp  timer.h  timer.hpp  types.h  types.hpp  unique_ptr.hpp  vector.hpp
core/input/: i_input.hpp  raw_input.cpp  raw_input.hpp  raw_input_keys.hpp
core/math/: base_math.h  base_math.hpp  mat4.cpp  mat4.h  mat4.hpp  quat.cpp  quat.h  quat.hpp  rectangle.hpp  vec2.cpp  vec2.h  vec2.hpp  vec3.cpp  vec3.h  vec3.hpp  vec4.cpp  vec4.h  vec4.hpp
core/platform/: api.hpp  types.hpp
core/platform/windows/: timing.cpp
engine/: CMakeLists.txt  basic_mesh.cpp  basic_mesh.h  basic_mesh_present.cpp  basic_mesh_present.h  camera.cpp  camera.h  controlled_camera.cpp  controlled_camera.h  mesh.cpp  mesh.h  object3d_location.cpp  object3d_location.h  onoff_key.cpp  onoff_key.h
renderer/: CMakeLists.txt  image.cpp  image.h  shader.cpp  shader.h  uniform.cpp  uniform.h
renderer/opengl/: gl.cpp
resources/: shader.vsh
